# fastapi_project

./: main.py  poetry_cmd.md  pyproject.toml
