[project]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = [{ name = "Mr-ZeLong", email = "473840782@qq.com" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
